--- a/content/css/shared/blocks.less
+++ b/content/css/shared/blocks.less
@@ -1,7 +1,11 @@
 @import "../blocks/animations.less";
+@import "../blocks/busyindicator.less";
+@import "../blocks/button.less";
 @import "../blocks/calendar.less";
+@import "../blocks/dropdown.less";
 @import "../blocks/list.less";
 @import "../blocks/modal.less";
+@import "../blocks/offline.less";
 @import "../blocks/tabs.less";
 @import "../blocks/timepicker.less";
 @import "../blocks/toast.less";
