--- a/content/css/shared/forms.less
+++ b/content/css/shared/forms.less
@@ -12,7 +12,7 @@ input, textarea {
 }
 
 label {
-    font-size: @label-font-size;
+    font-size: @font-size-label;
 }
 
 input:focus, textarea:focus {
