--- a/content/css/shared/variables.less
+++ b/content/css/shared/variables.less
@@ -109,10 +109,6 @@
 @background-dark: @color-graphite-3;
 @background-light: @color-graphite-2;
 @background-lighter: @color-graphite-1;
-// @background-darker: #ebebeb;
-// @background-dark: #f0f0f0;
-// @background-light: #f3f3f3;
-// @background-lighter: #f8f8f8;
 
 // --------------------------------------------------------
 // Common UI Elements
@@ -143,21 +139,9 @@
 @font-size-paragraph: @font-size-h5;
 @font-size-input: @font-size-h5;
 @font-size-very-small: 1rem;
-// @font-family: Helvetica, Arial, Sans-serif;
-// @font-size-h1: 20px;
-// @font-size-h2: 16px;
-// @font-size-h3: 14px;
-// @font-size-h4: 12px;
-// @font-size-h5: 10px;
-// @font-size-small: 11px;
-// @font-size-title: 32px;
-// @font-size-subtitle: 24px;
-// @font-size-paragraph: 14px;
-// @font-size-input: 14px;
-// @font-size-very-small: 9px;
+@font-size-label: @font-size-paragraph;
 
-@label-font-size: @font-size-paragraph;
-
+// Icons
 @icon-color: #fff;
 @icon-size: 2.4rem;
 
