--- a/content/css/themes/crm.less
+++ b/content/css/themes/crm.less
@@ -1,16 +1,13 @@
 // Index file for the CRM theme
-@import "../normalize.less";
+@import "../shared/variables.less";
+@import "../shared/mixins.less";
+@import "../shared/normalize.less";
+@import "../shared/type.less";
+@import "../shared/base.less";
+@import "../shared/forms.less";
+@import "../shared/blocks.less";
 
-@import "crm/type.less";
-@import "crm/base.less";
-@import "crm/theme.less";
-@import "crm/forms.less";
-@import "crm/toolbar.less";
-@import "crm/modal.less";
-@import "crm/dropdown.less";
-@import "crm/sohoxiControls.less";
-@import "crm/datetime-picker.less";
-@import "crm/busyindicator.less";
-@import "crm/offline.less";
+@import "default.less";
+
 
 @import "../../../libraries/font-awesome-4.4.0/less/font-awesome.less";
